Fix page margin-top relating w.r.t. review panel visibility

--- a/styles/page.css
+++ b/styles/page.css
@@ -10,7 +10,7 @@ body {
     flex-direction: column;
     margin-left: 3rem;
     margin-right: 3rem;
-    margin-top: 2rem;
+    margin-top: 4rem;
     margin-bottom: 2rem;
 
     @media screen {
@@ -46,7 +46,7 @@ body {
     .page {
       margin-left: 2rem;
       margin-right: 2rem;
-      margin-top: 1.5rem;
+      margin-top: 3.5rem;
       margin-bottom: 1.5rem;
     }
   }
@@ -58,7 +58,7 @@ body {
     .page {
       margin-left: 1.5rem;
       margin-right: 1.5rem;
-      margin-top: 1rem;
+      margin-top: 3rem;
       margin-bottom: 1rem;
 
       > h1 {
